--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,8 @@
         <item name="colorOnPrimary">@color/white</item>
         <item name="drawableTint">@color/white</item>
     </style>
+
+    <style name="Theme_card_covid" parent="Widget.MaterialComponents.CardView">
+
+    </style>
 </resources>
