--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#D5D5D5</color>
+    <color name="transparent">#00FFFFFF</color>
     
     
     <color name="covid_background_one">#ab47bc</color>
