completed RecyclerView in HomeFragment, misc improvements...

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,41 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.HomeFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <include
-                android:id="@+id/covid_layout"
-                layout="@layout/covid_card"
-                android:layout_margin="6dp"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="12dp"/>
-
-            <include
-                android:id="@+id/contact_layout"
-                layout="@layout/contacts_card"
-                android:layout_margin="6dp"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"/>
-
-        </LinearLayout>
-    </ScrollView>
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
 
 
     </androidx.recyclerview.widget.RecyclerView>
+
 </RelativeLayout>
