--- a/app/src/main/res/layout/contacts_card.xml
+++ b/app/src/main/res/layout/contacts_card.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="8dp"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="20dp"
+    android:layout_margin="8dp"
+    android:id="@+id/contacts_card">
 
     <LinearLayout
         android:layout_width="match_parent"
