--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/favorite"
+        android:id="@+id/test_mode"
         android:title="@string/test_mode_str" />
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/settings"
         android:title="@string/settings_str" />
 
 </menu>
